--- a/next-client/package.json
+++ b/next-client/package.json
@@ -17,6 +17,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.0.0",
     "tailwindcss": "2.0.4"
   },
   "scripts": {
