--- a/next-client/package.json
+++ b/next-client/package.json
@@ -13,6 +13,7 @@
     "chart.js": "2.9.4",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
+    "http-proxy-middleware": "^2.0.6",
     "next": "10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -23,7 +24,7 @@
   "scripts": {
     "start": "next start",
     "build": "next build",
-    "dev": "next dev",
+    "dev": "node server.js",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm run build:tailwind && npm run dev",
     "build:tailwind": "tailwind build styles/index.css -o styles/tailwind.css"
   },
