--- a/next-client/package.json
+++ b/next-client/package.json
@@ -19,7 +19,8 @@
     "react-dom": "17.0.1",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.0.0",
-    "tailwindcss": "2.0.4"
+    "tailwindcss": "2.0.4",
+    "zibal": "^1.0.2"
   },
   "scripts": {
     "start": "next start",
